frontend: fix position of lighting icon in accounts-summary
Was misaligned as the lightning icon is smaller than all other icons.

--- a/frontends/web/src/routes/account/summary/accountssummary.module.css
+++ b/frontends/web/src/routes/account/summary/accountssummary.module.css
@@ -11,19 +11,8 @@
     margin: 0 0 var(--spacing-large) 0;
 }
 .coincode {
-    height: 24px;
-    /* padding: 0px 0px 4px 10px; */
-}
-
-.coinheader {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-.coinheader > div:first-child {
-    height: 24px;
-    margin-right: calc(var(--space-half) / 2);
+    height: var(--sidebar-icon-size);
+    width: var(--sidebar-icon-size);
 }
 
 .dataMissing {
